# Knight-Moves-and-Safari-Grooves

./: .gitignore  .makefile  CMakeLists.txt  CMakeListscpy.txt  Makefile  Tesssttt  knightmovesandsafarigrooves  makefile
src/: TestGounki.cpp  TestSafari.cpp  a.out  main.cpp  test_model.cpp
src/controller/: Controller.cpp  Controller.hpp
src/model/: Board.hpp  Butin.cpp  Butin.hpp  ButinBoard.cpp  ButinBoard.hpp  ButinConfig.cpp  ButinConfig.hpp  ButinPiece.cpp  ButinPiece.hpp  Game.cpp  Game.hpp  GameConfig.hpp  Piece.hpp  Player.cpp  Player.hpp  Safari.cpp  Safari.hpp  SafariBoard.cpp  SafariBoard.hpp  SafariConfig.hpp  SafariPiece.cpp  SafariPiece.hpp  TestSafari.cpp  Tile.cpp  Tile.hpp
src/model/butin/: Butin.cpp  Butin.hpp  ButinBoard.cpp  ButinBoard.hpp  ButinConfig.cpp  ButinConfig.hpp  ButinPiece.cpp  ButinPiece.hpp
src/model/gounki/: Gounki.cpp  Gounki.hpp  GounkiBoard.cpp  GounkiBoard.hpp  GounkiPiece.cpp  GounkiPiece.hpp  TestGounki.cpp
src/model/safari/: Safari.cpp  Safari.hpp  SafariBoard.cpp  SafariBoard.hpp  SafariConfig.cpp  SafariConfig.hpp  SafariPiece.cpp  SafariPiece.hpp  TestSafari.cpp
src/settings/: SETTINGS.hpp
src/utilities/: Utilities.cpp  Utilities.hpp
src/view/: ButinState.cpp  ButinState.hpp  GameState.cpp  GameState.hpp  InputManager.cpp  InputManager.hpp  MenuState.cpp  MenuState.hpp  PauseState.hpp  PlayerState.cpp  PlayerState.hpp  ResourceManager.hpp  SafariState.cpp  SafariState.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp
src/view/butin/: ButinState.cpp  ButinState.hpp
src/view/gounki/: GounkiState.cpp  (+1 more)
(+2 files in other folders)
